update - v1.5: add communication into

--- a/public/assets/css/portfolio.css
+++ b/public/assets/css/portfolio.css
@@ -760,7 +760,7 @@ p {
 }
 
 .item-card > div > picture::before {
-  content: "Data Analysis";
+  content: "Game Developer";
   display: flex;
   flex-direction: column;
   align-items: flex-end;
